# zhaba

./: .gitignore  Cargo.toml  README.md
src/: config.rs  imghdr.rs  main.rs  router.rs  whois.rs
src/database/: mod.rs  queries.rs  schema.sql
src/router/: admin.rs  boards.rs  error.rs  headers.rs  home.rs  mod.rs  static_files.rs
src/router/html/: 400.html  404.html  500.html
src/templates/: mod.rs  models.rs
static/: style.css
templates/: about.html  admin.html  base.html  board.html  flash.html  index.html  login.html  posts.html
