[package]
name = "zhaba"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "signal", "io-util", "fs"] }
axum = { version = "0.6", default-features = false, features = ["form", "http1", "matched-path", "original-uri", "tokio", "tower-log", "multipart", "headers"] }
axum-sessions = "0.5"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7", default-features = false, features = ["parse"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"
mime_guess = "2.0"
rust-embed = "8.0"
bbscope = { version = "0.2", features = ["perf"] }
rusqlite = { version = "0.29", features = ["bundled"] }
rand = "0.8"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
